# ArduinoIconApp

./: CMakeLists.txt  README.md
src/: platformio.ini
src/ArduinoIconApp/: ArduinoIconApp.ino
src/ArduinoIconApp/src/icons/: Icon.h  IconColor.h  ProgMemIcons.h
src/ArduinoIconApp/src/lib/Adafruit_GFX_Library_mod/: Adafruit_GFX.cpp  glcdfont.c
src/ArduinoIconApp/src/lib/MCUFRIEND_kbv_mod/: UTFTGLUE.h
src/ArduinoIconApp/src/palette/: PaletteGenerator.cpp  PaletteGenerator.h  RgbToHsv.h
src/ArduinoIconApp/src/screen/: Colors.cpp  Colors.h  Font.cpp  Font.h  TFT.h
src/ArduinoIconApp/src/storage/: IconStorage.h
src/ArduinoIconApp/src/ui/: ArduinoIconApp.cpp  ArduinoIconApp.h  ArduinoIconAppUserInterface.cpp  ArduinoIconAppUserInterface.h  Button.cpp  Button.h  CalibrationView.cpp  CalibrationView.h  ColorPickerBrightnessBar.cpp  ColorPickerBrightnessBar.h  ColorPickerButton.cpp  ColorPickerButton.h  ColorPickerPalette.cpp  ColorPickerPalette.h  ColorPickerView.cpp  ColorPickerView.h  DrawingGridView.cpp  DrawingGridView.h  ExampleView.cpp  ExampleView.h  Toolbar.cpp  Toolbar.h  Tools.cpp  Tools.h  TouchHandler.cpp  TouchHandler.h  UiConstants.h  UndoBuffer.cpp  UndoBuffer.h
src/PBlockIcons/: PBlockIcons.ino  PBlocksIconsEditor.cpp  PBlocksIconsEditor.h  PBlocksMain.ino
src/PBlockIcons/src/icons/: IconColor.h  ProgMemIcons.cpp  ProgMemIcons.h
src/PBlockIcons/src/lib/Adafruit_GFX_Library_mod/: Adafruit_GFX.cpp
src/PBlockIcons/src/lib/MCUFRIEND_kbv_mod/: MCUFRIEND_kbv.h  TFT_HX8357GLUE.h
src/PBlockIcons/src/palette/: PaletteGenerator.cpp  PaletteGenerator.h  RgbToHsv.cpp  RgbToHsv.h
src/PBlockIcons/src/screen/: Colors.h  TFT.cpp  TFT.h
src/PBlockIcons/src/storage/: IconMem.cpp  IconMem.h  IconStorage.cpp  IconStorage.h
src/PBlockIcons/src/ui/: Button.cpp  Button.h  CalibrationView.cpp  CalibrationView.h  ColorPalette.cpp  ColorPalette.h  ColorPicker.cpp  ColorPicker.h  ColorPickerBrightnessBar.cpp  ColorPickerBrightnessBar.h  ColorPickerButton.cpp  ColorPickerButton.h  ColorPickerPalette.cpp  ColorPickerPalette.h  ColorPickerView.cpp  ColorPickerView.h  DrawingGrid.cpp  DrawingGrid.h  DrawingGridView.cpp  DrawingGridView.h  ExampleView.cpp  ExampleView.h  PBlocksUserInterface.cpp  PBlocksUserInterface.h  Toolbar.cpp  Toolbar.h  Tools.cpp  Tools.h  TouchHandler.cpp  TouchHandler.h
src/lib/MCUFRIEND_kbv/: UTFTGLUE.h
test/fake/: Arduino.cpp  Arduino.h  EEPROM.h  MCUFRIEND_kbv.cpp  MCUFRIEND_kbv.h  Print.h  TouchScreen.h  pins_arduino.h
test/fake/avr/: pgmspace.cpp  pgmspace.h
test/fake/utility/: mcufriend_shield.h
test/src/PBlocksDisplay/: TestTouchRegion.cpp
test/src/palette/: TestRgbToHsv.cpp
test/src/ui/: TestTouchRegion.cpp
